Dacxirons 1.5.2

Added blessed gold armor full set visual effect to dacxirons blessed priest