@@ -28,6 +28,7 @@ public class dacxironsSpellRegistry {
   public static final RegistryObject<AbstractSpell> CRIMSON_OATH = registerSpell(new CrimsonOath());;
   public static final RegistryObject<AbstractSpell> SUNS_WRATH = registerSpell(new SunsWrath());
     public static final RegistryObject<AbstractSpell> ELDRITCH_SLASH_SPELL = registerSpell(new EldritchSlashSpell());
+    public static final RegistryObject<AbstractSpell> FIREBOLTCOPY = registerSpell(new FireboltCopySpell());
 
     public static RegistryObject<AbstractSpell> registerSpell(AbstractSpell spell) {
         return SPELLS.register(spell.getSpellName(), () -> spell);
