@@ -1,0 +1,95 @@
+package com.skydude.dacxirons.spells;
+
+import com.skydude.dacxirons.dacxirons;
+import io.redspace.ironsspellbooks.IronsSpellbooks;
+import io.redspace.ironsspellbooks.api.config.DefaultConfig;
+import io.redspace.ironsspellbooks.api.magic.MagicData;
+import io.redspace.ironsspellbooks.api.registry.SchoolRegistry;
+import io.redspace.ironsspellbooks.api.spells.*;
+import io.redspace.ironsspellbooks.api.util.Utils;
+import io.redspace.ironsspellbooks.damage.SpellDamageSource;
+import io.redspace.ironsspellbooks.entity.spells.firebolt.FireboltProjectile;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.Mth;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.phys.Vec3;
+import org.jetbrains.annotations.Nullable;
+
+import java.util.List;
+
+import static com.skydude.dacxirons.effect.SpellBurnProcedure.lastattacker;
+
+@AutoSpellConfig
+public class FireboltCopySpell extends AbstractSpell {
+    private final ResourceLocation spellId = new ResourceLocation(dacxirons.MOD_ID, "firebolt_copy");
+
+    @Override
+    public List<MutableComponent> getUniqueInfo(int spellLevel, LivingEntity caster) {
+        return List.of(Component.translatable("ui.irons_spellbooks.damage", Utils.stringTruncation(getDamage(spellLevel, caster), 2)));
+    }
+
+    private final DefaultConfig defaultConfig = new DefaultConfig()
+            .setMinRarity(SpellRarity.COMMON)
+            .setSchoolResource(SchoolRegistry.FIRE_RESOURCE)
+            .setAllowCrafting(false)
+            .setMaxLevel(10)
+            .setCooldownSeconds(1)
+            .build();
+
+    public FireboltCopySpell() {
+        this.manaCostPerLevel = 2;
+        this.baseSpellPower = 12;
+        this.spellPowerPerLevel = 1;
+        this.castTime = 0;
+        this.baseManaCost = 10;
+    }
+
+    @Override
+    public CastType getCastType() {
+        return CastType.INSTANT;
+    }
+
+    @Override
+    public DefaultConfig getDefaultConfig() {
+        return defaultConfig;
+    }
+
+    @Override
+    public ResourceLocation getSpellResource() {
+        return spellId;
+    }
+
+    @Override
+    public void onCast(Level world, int spellLevel, LivingEntity entity, CastSource castSource, MagicData playerMagicData) {
+        FireboltProjectile firebolt = new FireboltProjectile(world, entity);
+        firebolt.setPos(entity.position().add(0, entity.getEyeHeight() - firebolt.getBoundingBox().getYsize() * .5f, 0));
+        //null checks, dont wanna be beating a dead horse
+        if(lastattacker == null) return;
+        if(!lastattacker.isAlive()) return;
+
+        Vec3 from = entity.getEyePosition();
+        Vec3 to = lastattacker.getEyePosition();
+        Vec3 direction = to.subtract(from).normalize();
+
+        firebolt.shoot(direction.x, direction.y, direction.z, 1.6f, 0.0f);
+        firebolt.setDamage(getDamage(spellLevel, entity));
+        world.addFreshEntity(firebolt);
+        super.onCast(world, spellLevel, entity, castSource, playerMagicData);
+    }
+
+    @Override
+    public SpellDamageSource getDamageSource(@Nullable Entity projectile, Entity attacker) {
+        return super.getDamageSource(projectile, attacker).setFireTime(3);
+    }
+
+    private float getDamage(int spellLevel, LivingEntity entity) {
+        return getSpellPower(spellLevel, entity) * .5f;
+    }
+
+
+
+}
